# gestion-budget-julie

./: .env.example  .gitignore  DEPLOYMENT.md  MIGRATION.md  PRD.md  QUICK_DEPLOY.md  README.md  add_pointed_column.py  budget-manager.service  config.py  main.py  migrate_epargne.py  pyproject.toml  remove_date_column.py  wsgi.py
app/: __init__.py  forms.py  models.py
app/routes/: __init__.py  periods.py  transactions.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html
app/templates/periods/: create.html  detail.html
app/templates/transactions/: form.html
migrations/versions/: 0e9c474e3c9c_remove_date_field_and_add_pointed_field_.py  4e61169cc91a_allow_zero_amount_in_transactions.py  e5b4c1194ada_update_valid_type_constraint_to_include_.py  ea94c8464207_remove_date_column_from_transactions.py  ec51fe643eaa_add_pointed_field_to_transactions.py
tests/: __init__.py
